{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 585,
  "lineage": "686b45c5-767e-0b6c-1538-8083d77d0efd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099401a5a774606fc",
            "arn": "arn:aws:ec2:us-west-2:405894863484:elastic-ip/eipalloc-099401a5a774606fc",
            "association_id": "eipassoc-0d7b1ddefbe82ba3b",
            "domain": "vpc",
            "id": "eipalloc-099401a5a774606fc",
            "instance": "i-0067d055556e1f1a3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f2543484d14d128f",
            "private_dns": "ip-10-0-1-212.us-west-2.compute.internal",
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-52-24-220-204.us-west-2.compute.amazonaws.com",
            "public_ip": "52.24.220.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "app_eip_0",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "app_eip_0",
              "Project": "Cigar Data Scraper"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.kp",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d06988dbb6bb46c9",
            "arn": "arn:aws:ec2:us-west-2:405894863484:instance/i-0067d055556e1f1a3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0067d055556e1f1a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2543484d14d128f",
            "private_dns": "ip-10-0-1-212.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01be86b3cd0c143bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053fd3c2df8d7fa9a",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "web_0",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "web_0",
              "Project": "Cigar Data Scraper"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06127ab0b873c0bf8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:internet-gateway/igw-04737defd420b56a4",
            "id": "igw-04737defd420b56a4",
            "owner_id": "405894863484",
            "tags": {
              "Customer": "Smoke Inn",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Project": "Cigar Data Scraper"
            },
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:route-table/rtb-0b74f0ade7780f186",
            "id": "rtb-0b74f0ade7780f186",
            "owner_id": "405894863484",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:route-table/rtb-0ad6b3525da95d952",
            "id": "rtb-0ad6b3525da95d952",
            "owner_id": "405894863484",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04737defd420b56a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a047c6063275070",
            "route_table_id": "rtb-0b74f0ade7780f186",
            "subnet_id": "subnet-0e2ae65e90da6bb55"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f8dbd50bcc9b1d9",
            "route_table_id": "rtb-0b74f0ade7780f186",
            "subnet_id": "subnet-0f72ca99eee1cad2b"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0effcc15292fc7cd5",
            "route_table_id": "rtb-0ad6b3525da95d952",
            "subnet_id": "subnet-053fd3c2df8d7fa9a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1fa9935b1193ace",
            "route_table_id": "rtb-0ad6b3525da95d952",
            "subnet_id": "subnet-020cc46ac34b9642b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:security-group/sg-0df20a3c9738fa9b4",
            "description": "Security group for database",
            "egress": [],
            "id": "sg-0df20a3c9738fa9b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow mysql traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "405894863484",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "db_sg",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "db_sg",
              "Project": "Cigar Data Scraper"
            },
            "timeouts": null,
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:security-group/sg-06127ab0b873c0bf8",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06127ab0b873c0bf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic though HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.164.229.140/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "405894863484",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "web_sg",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "web_sg",
              "Project": "Cigar Data Scraper"
            },
            "timeouts": null,
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:subnet/subnet-0e2ae65e90da6bb55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ae65e90da6bb55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405894863484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "private_subnet_0",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "private_subnet_0",
              "Project": "Cigar Data Scraper"
            },
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:subnet/subnet-0f72ca99eee1cad2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f72ca99eee1cad2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405894863484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "private_subnet_1",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "private_subnet_1",
              "Project": "Cigar Data Scraper"
            },
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:subnet/subnet-053fd3c2df8d7fa9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053fd3c2df8d7fa9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405894863484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "public_subnet_0",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "public_subnet_0",
              "Project": "Cigar Data Scraper"
            },
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:subnet/subnet-020cc46ac34b9642b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020cc46ac34b9642b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405894863484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "Smoke Inn",
              "Name": "public_subnet_1",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Name": "public_subnet_1",
              "Project": "Cigar Data Scraper"
            },
            "vpc_id": "vpc-088dfb1748b71c791"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:405894863484:vpc/vpc-088dfb1748b71c791",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b68297bcee597cd",
            "default_route_table_id": "rtb-072fdb9bdbf454c89",
            "default_security_group_id": "sg-01f86c959e9ddfb6a",
            "dhcp_options_id": "dopt-010adc1eb6ee4b616",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088dfb1748b71c791",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072fdb9bdbf454c89",
            "owner_id": "405894863484",
            "tags": {
              "Customer": "Smoke Inn",
              "Project": "Cigar Data Scraper"
            },
            "tags_all": {
              "Customer": "Smoke Inn",
              "Project": "Cigar Data Scraper"
            }
          }
        }
      ]
    }
  ]
}